Switched to new name and added new block ;)

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
 .gradle/
-
 .settings/
-
-bin/
-
 build/
-
 eclipse/
-
 gradle/
-
-*.txt
+run/
 
 build.gradle
 
-gradlew
+*.txt
+*.launch
 
+gradlew
 gradlew.bat
+/bin/
