--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,8 @@ version = "1.0.0"
 group= "lordmastodon.miscal" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "miscal"
 
-task version {
-    File f = new File("$buildDir/libs/version.txt")
-    if (!f.getParentFile().exists()) f.getParentFile().mkdirs()
-    if (!f.exists()) f.createNewFile()
-    FileOutputStream fos = new FileOutputStream(f)
-    fos.write(project.version.getBytes())
-    fos.close()
-}
-
 minecraft {
-    version = "1.8-11.14.3.1506"
+    version = "1.8-11.14.3.1512"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -42,7 +33,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20141130"
+    mappings = "stable_2.0.1"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
